--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
-* {
-    background-image: "star-wars-background.jpeg";
+html {
+    background-image: url("/public/images/star-wars-background.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height:100vh;
+    background-color: black;
+}
+.searchbar-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color:white;
+    margin: auto;
+    padding-top: 20vh;
+    width: 40%;
+    min-width: 200px;
 }
