--- a/src/styles/Searchresults.css
+++ b/src/styles/Searchresults.css
@@ -2,11 +2,14 @@
     display: flex;
     width: 100%;
     border-radius: 10px;
-    height: 2.5rem;
+    height: auto;
+    min-height: 2.5em;
     padding: 0 15px;
     color: aliceblue;
     box-shadow: 0px 0px 8px #ddd;
     align-items: center;
     margin-top: 10px;
+    flex-direction: column;
+    background-color: rgba(128, 128, 128, 0.497);
 }
 
