--- a/src/styles/Searchresults.css
+++ b/src/styles/Searchresults.css
@@ -11,5 +11,6 @@
     margin-top: 10px;
     flex-direction: column;
     background-color: rgba(128, 128, 128, 0.497);
+    margin-bottom: 100px;
 }
 
